# verikt

./: .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  go.mod  go.sum
.claude/: CLAUDE.md  settings.json  soul.md
.claude/agents/: api.md  architect.md  backend.md  compliance.md  data.md  dba.md  debugger.md  docs.md  frontend.md  gtm.md  mobile.md  performance.md  platform.md  pm.md  principal-architect.md  principal-data.md  principal-dba.md  principal-ux.md  qa.md  reviewer.md  security.md  senior-api.md  senior-backend.md  senior-performance.md  senior-pm.md  seo.md  sre.md  staff-docs.md  staff-engineer.md  staff-frontend.md  staff-qa.md  staff-security.md  staff-sre.md  ux.md
.claude/rules/: architecture.md  archway.md  code-quality.md  content-voice.md  error-handling.md  go.md  governance.md  linter-golangci.md  security.md  testing.md  verikt.md
.edikt/: config.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
.keel/: config.yaml
cmd/archway/: main.go
cmd/verikt/: main.go
docs/decisions/: 001-embedded-providers-over-plugins.md  002-template-architecture.md  003-terraform-mental-model.md  004-three-layer-extensibility.md  005-project-structure.md  (+5 more)
engine/: Cargo.toml
engine/crates/engine-bin/: Cargo.toml  build.rs
engine/crates/engine-bin/src/: antipatterns.rs  grep.rs  import_graph.rs  main.rs  metrics.rs  typescript_imports.rs
experiments/: go.mod  index.json
scripts/: install.sh
website/: README.md  astro.config.mjs  package-lock.json
(+977 files in other folders)
