[package]
name = "engine-bin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "archway-engine"
path = "src/main.rs"

[dependencies]
prost = { workspace = true }
regex = "1"
globset = "0.4"
tree-sitter = "0.24"
tree-sitter-go = "0.23"
petgraph = "0.7"

[build-dependencies]
prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }
